Steal theme from Georg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+        <link rel="stylesheet" href="dist/theme/findologic.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -16,7 +16,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown>
+				<section data-markdown
+                         data-separator-vertical="^\n\n"
+                         data-separator-notes="^Note:"
+                         data-background-image="img/Findologic_Logo-Light.svg"
+                         data-background-size="10%"
+                         data-background-position="2% 98%">
                     # Voice Assistant Skill Development with Mycroft
                 </section>
                 
@@ -33,7 +38,7 @@
                     <section data-markdown>
                         ### About me
 
-                        * I'm Chris 👋
+                        * I'm [Chris](mailto:c.ortner@findologic.com) 👋
                         * **L**ead **S**earch **D**eveloper at Findologic
                         * Jack of all trades
                         * I like cycling, gardening, and making
@@ -51,7 +56,7 @@
                         ### What's Mycroft?
 
                         * Open source voice assistant
-                        * Respects privacy by default
+                        * Respects\* privacy by default
                         * Mostly Python
                         * Hardware:
                           * All-in-one solutions
