Findologize final slide

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown
-                         data-separator-vertical="^\n\n"
-                         data-separator-notes="^Note:"
                          data-background-image="img/Findologic_Logo-Light.svg"
                          data-background-size="10%"
                          data-background-position="2% 98%">
@@ -207,7 +205,10 @@ idasen-controller --move-to stand
                 </section>
 
 
-                <section>
+                <section
+                         data-background-image="img/Findologic_Logo-Light.svg"
+                         data-background-size="10%"
+                         data-background-position="2% 98%">
                     <p style="font-size: 40vh">🍔</p>
                 </section>
 			</div>
